--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -71,5 +71,72 @@ a {
 
 .main{
     background-color: #F2F2F2;
-    height: 1024px;
+    height: 2024px;
+}
+
+/* grid main area */
+.grid-main{
+    display: grid;
+    grid-template-columns: repeat(8,1fr);
+    grid-auto-rows: minmax(300%,auto);
+    grid-template-areas:
+    "gsa gsa gsa    gsa   gsa   gsa    grah  grah"
+    "gsa gsa gsa    gsa   gsa   gsa    grac  grac "
+    "gla gla gcah   gcah  gcah  gcah   grac  grac"   
+    "gla gla gcahl  gcahl gcahr gcahr  graf  graf"
+    ;
+    grid-gap: 40% 2%;
+    padding: 2% 2% 0% 2%
+}
+
+/* grid-slide-area */
+.grid-slide-area {
+    grid-area:gsa;
+    border: solid #101010;
+}
+/* grid-left-area */
+.grid-left-area{
+    grid-area:gla;
+    border: solid #101010;
+}
+
+/* 
+    grid-center-area
+*/
+
+/* grid-center-area-header */
+.grid-center-area-header{
+    grid-area:gcah;
+    border: solid #101010;
+}
+
+/* grid-center-area-footer */
+.grid-center-area-footer-left{
+    grid-area:gcahl;
+    border: solid #101010;
+}
+
+.grid-center-area-footer-right{
+    grid-area:gcahr;
+    border: solid #101010;
+}
+/* 
+    grid right area 
+*/
+
+/* grid-right-area-header */
+.grid-right-area-header{
+    grid-area:grah;
+    border: solid #101010;
+}
+/* grid-right-area-center */
+.grid-right-area-center{
+    grid-area:grac;
+    border: solid #101010;
+}
+
+/* grid-right-area-footer */
+.grid-right-area-footer{
+    grid-area:graf;
+    border: solid #101010;
 }
