--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,8 +14,9 @@
     height: 40px;
     border: none;
     font-size: 14px;
-    font-weight: bold;
+    font-weight: 500px;
     font-family: Oswald;
+    letter-spacing: 1.75px;
 }
 
 .card-footer{
@@ -26,14 +27,24 @@
 
     display: flex;
     justify-content: flex-start;
+    align-items: center;
 }
 
 .card-footer > span{
-    padding: 0% 4%;
+    padding: 0% 5%;
 }
 
+/* 
+
+    grid right area header
+
+*/
 .grid-right-area-header{
-    background-image: url(../images/img/card_1.png)
+    background-image: url(../images/img/card_1.png);
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .grid-right-area-header > div {
@@ -62,4 +73,407 @@
     text-align: left;
 }
 
+.grid-right-area-center{
+    text-align: center;
+    background-color:#FF565C;
+}
 
+.grid-right-area-center > div {
+    display: flex;
+    flex-direction: column;
+    padding: 10%;
+}
+
+.grid-right-area-center-header{
+    font-size: 26px;
+    font-weight: bold;
+    font-family: Oswald;
+    color: #FFFFFF;
+    text-align: left;
+    margin: 0% 0% 8%;
+    line-height: 1.5;
+}
+
+.grid-right-area-center-center{
+    font-size: 17px;
+    font-family: Lato;
+    color: #FFFFFF;
+    text-align: left;
+    line-height: 1.8
+}
+
+.grid-right-area-center-footerBnt{
+    font-size: 16px;
+    font-weight: bold;
+    font-family: Oswald;
+    color: white;
+    background-color:#FF565C;
+    margin: 12% 0% -17% 0%;
+    width: 75%;
+    height: 62px;
+    border: 1px solid white;
+    border-bottom: inset;
+}
+
+
+/* 
+    grid right area footer
+*/
+.grid-right-area-footer{
+    background-image: url(../images/img/card_2.png);
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.grid-right-area-footer > div {
+    /* position: relative; */
+    display: flex;
+    flex-direction: column;
+}
+
+.grid-right-area-footer > div > button {
+    margin: 9% 0% 6%;
+}
+
+.grid-right-area-footer > div > span {
+    margin: 0% 0% 0% 8%;
+}
+
+.grid-right-area-footer > div > .card-footer {
+    margin: 24% 0% 0% 8%;
+}
+
+.grid-right-area-footer-text {
+    font-size: 25px;
+    font-weight: bold;
+    font-family: Oswald;
+    color: #FFFFFF;
+    text-align: left;
+}
+
+.technologyBtn{
+    background-color: #FF565C;
+    color:#FFFFFF;
+    width: 132px;
+    height: 48px;
+    border: none;
+    font-size: 14px;
+    font-weight: 600;
+    font-family: Oswald;
+    text-align: center;
+    letter-spacing: 1.75px;
+}
+
+
+/* 
+    grid center area footer right
+*/
+.grid-center-area-footer-right{
+    background-image: url(../images/img/card_3.png);
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.grid-center-area-footer-right > div {
+    /* position: relative; */
+    display: flex;
+    flex-direction: column;
+}
+
+.grid-center-area-footer-right > div > button {
+    margin: 9% 0% 6%;
+}
+
+.grid-center-area-footer-right > div > span {
+    margin: 0% 0% 0% 8%;
+}
+
+.grid-center-area-footer-right > div > .card-footer {
+    margin: 14% 0% 0% 8%;
+}
+
+.grid-center-area-footer-right-text {
+    font-size: 25px;
+    font-weight: bold;
+    font-family: Oswald;
+    color: #FFFFFF;
+    text-align: left;
+}
+
+.technologyBtn{
+    background-color: #FF565C;
+    color:#FFFFFF;
+    width: 132px;
+    height: 48px;
+    border: none;
+    font-size: 14px;
+    font-weight: 600;
+    font-family: Oswald;
+    text-align: center;
+    letter-spacing: 1.75px;
+}
+
+.gamingBtn{
+    background-color: #FF565C;
+    color:#FFFFFF;
+    width: 106px;
+    height: 48px;
+    border: none;
+    font-size: 14px;
+    font-weight: 600;
+    font-family: Oswald;
+    text-align: center;
+    letter-spacing: 1.75px;
+}
+
+
+/* 
+    grid center area footer left
+*/
+.grid-center-area-footer-left{
+    background-image: url(../images/img/card_4.png);
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.grid-center-area-footer-left > div {
+    /* position: relative; */
+    display: flex;
+    flex-direction: column;
+}
+
+.grid-center-area-footer-left > div > button {
+    margin: 9% 0% 6%;
+}
+
+.grid-center-area-footer-left > div > span {
+    margin: 0% 0% 0% 8%;
+}
+
+.grid-center-area-footer-left > div > .card-footer {
+    margin: 14% 0% 0% 8%;
+}
+
+.grid-center-area-footer-left-text {
+    font-size: 25px;
+    font-weight: bold;
+    font-family: Oswald;
+    color: #FFFFFF;
+    text-align: left;
+}
+
+.foot-financeBtn{
+    background-color: #FF565C;
+    color:#FFFFFF;
+    width: 120px;
+    height: 48px;
+    border: none;
+    font-size: 14px;
+    font-weight: 600;
+    font-family: Oswald;
+    text-align: center;
+    letter-spacing: 1.75px;
+}
+
+
+/* 
+    grid center area header
+*/
+.grid-center-area-header{
+    background-image: url(../images/img/card_5.png);
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.grid-center-area-header > div {
+    /* position: relative; */
+    display: flex;
+    flex-direction: column;
+}
+
+.grid-center-area-header > div > button {
+    margin: 4.2% 0% 3%;
+}
+
+.grid-center-area-header > div > span {
+    margin: 0% 0% 0% 4%;
+}
+
+.grid-center-area-header > div > .card-footer {
+    margin: 6% 0% 0% 4%;
+}
+
+.grid-center-area-header > div > .card-footer > span {
+    padding: 0% 3%;
+}
+
+.grid-center-area-header-text {
+    font-size: 25px;
+    font-weight: bold;
+    font-family: Oswald;
+    color: #FFFFFF;
+    text-align: left;
+}
+
+.entertainmentBtn{
+    background-color: #FF565C;
+    color:#FFFFFF;
+    width: 178px;
+    height: 48px;
+    border: none;
+    font-size: 14px;
+    font-weight: 600;
+    font-family: Oswald;
+    text-align: center;
+    letter-spacing: 1.75px;
+}
+
+
+/* grid-left-list-area */
+
+.grid-left-list-area{
+    display: flex;
+    flex-direction: column;
+    margin: 12% 12%;
+}
+
+.grid-left-area > div > span{
+    font-size: 14px;
+    font-weight: bold;
+    font-family: Oswald;
+    color: black;
+    text-align: left;
+    letter-spacing: 1.75px;
+}
+
+.ol-list{
+    margin: 15% 0% 0% -9%;
+}
+
+.ol-list > li {
+    font-size: 18px;
+    font-family: Lato;
+    font-weight: 500;
+    letter-spacing: -0.2px;
+    line-height: 1.5;
+    padding: 7% 0% 15% 5%;
+    counter-increment: list;
+    list-style-type: none;
+    position: relative;
+}
+
+.ol-list > li:before {
+    color:#BDBDBD;
+    content: counter(list);
+    position: absolute;
+    left: -9%;
+}
+
+.ol-list > li:last-child {
+    padding: 13% 0% 13% 5%;
+}
+
+.ol-list-vertical{
+    margin:-5% 0% 0% -24%;
+    width: 140%;
+    border: 1px solid #F2F3F6;
+}
+
+
+.grid-slide-area{
+    background-image: url(../images/img/card_6.png);
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.slideshow-container{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.prev , .next{
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    background-color: rgba(0,0,0,0.8);
+}
+
+.next{
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.slideshow-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.slideshow-content > div > button {
+    margin: 4.2% 0% 3%;
+}
+
+.slideshow-content > div > .card-footer {
+    margin: 6% 0% 0% 4%;
+}
+
+.slideshow-content > div > .card-footer > span {
+    padding: 0% 3%;
+}
+
+.slideshow-content-text {
+    font-size: 25px;
+    font-weight: bold;
+    font-family: Oswald;
+    color: #FFFFFF;
+    text-align: center;
+    position: absolute;
+    top: 35%;
+}
+
+.slideshow-content-small-text{
+    font-size: 18px;
+    font-family: Lato;
+    color: #FFFFFF;
+    text-align: center;
+    position: absolute;
+    top: 49%;
+    opacity: 0.7;
+}
+
+.slideshow-content > .financeBtn{
+    top: 22%;
+    position: absolute;
+}
+
+.slideshow-content .card-footer{
+    bottom: 4%;
+    position: absolute;
+    left: 41%;
+}
+
+.slideshow-content .card-footer span {
+    margin: 0% 7% 0% 3%;
+}
