--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -64,6 +64,7 @@
     width: 47%;
     top: -30%;
     position: absolute;
+    left: 235%;
 }
 
 .footer-nav-item:not(:first-child){
@@ -93,11 +94,34 @@
 
 .footer-form{
     position:absolute;
-    width: 100%;
-    height: 100%;
+    left: 203%;
+    display: flex;
+    align-items: center;
 }
 
 .footer-form-input{
-    width: 71%;
-    height: 42%;
+    width: 223px;
+    height: 40px;
+}
+
+.footer-form-input::placeholder{
+    font-family: Lato;
+    font-size: 14px;
+    font-weight: 400;
+    color: black;
+    opacity: 0.5;
+    letter-spacing: 0px !important;
+    padding: 0% 0% 0% 7%;
+}
+
+.subsBtn{
+    background-color: #FF565C;
+    color:#FFFFFF;
+    width: 131px;
+    height: 45px;
+    border: none;
+    font-size: 12px;
+    font-weight: 500px;
+    font-family: Oswald;
+    letter-spacing: 1.5px;
 }
